# all-in-one

kafka/sample-app/: Dockerfile  Dockerfile2  README.md  docker-compose.yml  pyproject.toml
kafka/sample-app/src/: .env.local  config.py  consumer.py  main.py  main2.py  producer.py  schema.py
